--- a/gap-example/package.json
+++ b/gap-example/package.json
@@ -23,6 +23,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "classnames": "^2.2.6",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1"
   }
